refactor(service): optimize BulletinService to linear complexity with pre-indexed notes